--- a/Sprint3/package.json
+++ b/Sprint3/package.json
@@ -12,6 +12,7 @@
     "start-cors": "node start.js"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.34",
     "axios": "^1.7.7",
     "express": "^4.19.2",
     "http-proxy-middleware": "^3.0.2",
